--- a/style.css
+++ b/style.css
@@ -9,21 +9,22 @@ body {
 }
 
 #logo-home {
-    width: 100px;
+    width: 70px;
     height: auto;
 }
 
 header {
     width: 100%;
-    height: 90px;
+    height: 70px;
     display: flex;
     align-items: center;
     background-color: #0c0811;
-    justify-content: flex-start;
+    justify-content: center;
+    transition: 1.8s;
 }
 
 nav {
-    width: 50%;
+    width: 60%;
 }
 
 .nav-ul {
@@ -67,7 +68,7 @@ li:hover {
     color: aliceblue;
     padding: 40px 0 20px 0;
     font-size: 40px;
-    line-height: 1;
+    line-height: 1.1;
 }
 
 #button-cta-home {
@@ -186,6 +187,10 @@ hr { background-color: #720DFA; height: 1px; border: 0; }
 
 @media(max-width: 768px){
 
+    #logo-home {
+        padding-left: 5%;
+    }
+
     nav{
         display: none;
     }
@@ -246,8 +251,14 @@ hr { background-color: #720DFA; height: 1px; border: 0; }
         grid-template-columns: repeat(2, 1fr);
     }
 
-
-
+    header {
+        width: 100%;
+        height: 90px;
+        display: flex;
+        align-items: center;
+        background-color: #0c0811;
+        justify-content: flex-start;
+    }
 
 
 }
